spacing updaed and fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1682,6 +1682,10 @@ strong {
   /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */
 }
 
+.horizontal-scroller-card-2 {
+  background: transparent !important;
+}
+
 /* our partners section */
 
 .our-partners-section {
@@ -3391,7 +3395,7 @@ strong {
 
   .our-partners-section {
     margin: 5rem auto 5rem auto;
-    padding-top: 0 5rem;
+    padding-top: 5rem;
   }
 
   .text-to-reveal-section-wrapper {
